[dev]安裝element，並正式引入，使用單選匡

--- a/foodieMRT/src/assets/main.css
+++ b/foodieMRT/src/assets/main.css
@@ -16,6 +16,13 @@ a,
 }
 
 .nav{
+  margin-bottom: 10px;
+}
+
+.MRTradio{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 15px;
 }
 
