[dev]使用pinia雙向綁定資料，完成StationItem初步設計

--- a/foodieMRT/src/assets/main.css
+++ b/foodieMRT/src/assets/main.css
@@ -18,7 +18,19 @@ a,
 .nav{
   margin-bottom: 10px;
 }
-
+.stationLine{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  .el-radio-group{
+    gap: 5px 0;
+  }
+}
+.bl_line .el-radio-button__original-radio:checked+.el-radio-button__inner{
+  background-color: blue;
+  border-color: blue;
+}
 .MRTradio{
   display: flex;
   justify-content: center;
