[dev]引入台北捷運站點json檔案，將台北捷運線顏色樣式引用，接續完成換頁及座標搜尋結果建制

--- a/foodieMRT/src/assets/base.css
+++ b/foodieMRT/src/assets/base.css
@@ -19,6 +19,13 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+
+  --bl_line: #0070BD;
+  --r_line: #E3002D;
+  --g_line: #008659;
+  --br_line: #C48C30;
+  --o_line: #F8B61D;
+  --y_line: #FDDA03;
 }
 
 /* semantic color variables for this project */
